--- a/av01/styles/styles.css
+++ b/av01/styles/styles.css
@@ -1,12 +1,14 @@
 :root {
-    --flamingo-latte: #dd7878;
-    --maroon-latte: #e64553;
+    --pink-latte: #ea76cb;
+    --mauve-latte: #8839ef;
     --overlay2-latte: #8c8fa1;
+    --surface0-latte: #ccd0da;
     --base-latte: #eff1f5;
     --mantle-latte: #e6e9ef;
+    --crust-latte: #dce0e8;
 
-    --flamingo-frappe: #f2cdcd;
-    --red-frappe: #e78284;
+    --mauve-frappe: #ca9ee6;
+    --lavender-frappe: #babbf1;
     --surface0-frappe: #414559;
     --base-frappe: #303446;
     --mantle-frappe: #292c3c;
@@ -25,7 +27,7 @@ button, .button {
     display: inline-block;
     border: none;
     cursor: pointer;
-    background-color: var(--flamingo-latte);
+    background-color: var(--mauve-frappe);
     color: var(--base-latte);
     font-weight: bold;
     font-size: 1rem;
@@ -46,7 +48,7 @@ button, .button {
 
 html {
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+    /*scroll-snap-type: y mandatory;*/
 }
 
 html, body {
@@ -59,6 +61,18 @@ body {
     background-color: var(--base-frappe);
 }
 
+input, input::placeholder, textarea, textarea::placeholder {
+    font-size: 1rem;
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 0.5rem 0.75rem;
+}
+
+textarea:focus, input:focus {
+    outline: none;
+    border: 1px solid var(--mauve-frappe) !important;
+}
+
 main {
     color: var(--texto-branco);
 }
@@ -67,7 +81,7 @@ header {
     scroll-snap-align: start;
 }
 
-#sobre-mim, #floricultura {
+#sobre, #pets {
     scroll-snap-align: center;
 }
 
@@ -99,17 +113,17 @@ header > div {
 header > div a {
     text-decoration: none;
     color: var(--texto-latte);
-    border-bottom: 2px solid var(--overlay2-latte);
+    border-bottom: 2px solid var(--surface0-latte);
     margin-bottom: -1rem;
     padding-bottom: 2px;
     transition: transform 100ms ease;
 
     &:hover {
-        border-color: var(--flamingo-latte);
+        border-color: var(--mauve-latte);
     }
 
     &:active {
-        border-color: var(--flamingo-latte);
+        border-color: var(--mauve-latte);
         transform: scale(.98);
     }
 }
