fix: rehabilita scroll-snap-type

--- a/av01/styles/styles.css
+++ b/av01/styles/styles.css
@@ -48,7 +48,7 @@ button, .button {
 
 html {
     scroll-behavior: smooth;
-    /*scroll-snap-type: y mandatory;*/
+    scroll-snap-type: y mandatory;
 }
 
 html, body {
