--- a/av03/src/styles/admin-styles.css
+++ b/av03/src/styles/admin-styles.css
@@ -20,6 +20,7 @@
     padding: 1rem;
     display: flex;
     align-items: center;
+    gap: .5rem;
 
     & > * {
         margin: 0;
@@ -50,6 +51,32 @@
     margin: 0 .5rem;
     padding: 1rem;
     gap: .75rem;
+}
+
+#dashboard-filter {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid var(--surface0-latte);
+    margin: 0 .5rem;
+    padding: 1rem;
+    gap: 1rem;
+
+    & .filter-row {
+        width: 100%;
+        gap: .75rem;
+        align-items: end;
+
+        & svg {
+            font-size: 1.25rem;
+        }
+
+        & button {
+            font-weight: normal;
+            gap: .25rem;
+            padding: 0 1rem;
+            height: 2.5rem;
+        }
+    }
 }
 
 .dashboard-item {
