--- a/av03/src/styles/index-styles.css
+++ b/av03/src/styles/index-styles.css
@@ -1,4 +1,4 @@
-#sobre, #pets {
+#sobre, #missao {
     scroll-snap-align: center;
 }
 
@@ -41,13 +41,13 @@
     }
 }
 
-#pets {
+#missao {
     background-color: var(--base-latte);
     color: var(--texto-latte);
     justify-content: space-between;
 }
 
-#pets-content {
+#missao-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,9 +62,14 @@
         line-height: 2;
         margin: 0;
     }
+
+    & a {
+        margin-top: 1rem;
+        width: fit-content;
+    }
 }
 
-#pets-show {
+#missao-show {
     display: flex;
     margin-right: 4rem;
     gap: 4rem;
@@ -170,18 +175,19 @@
 }
 
 @media screen and (max-width: 1300px) {
-    #pets {
+    #missao {
         gap: 2rem;
         flex-direction: column;
         align-items: center;
         justify-content: center;
 
-        & #pets-content {
+        & #missao-content {
             max-width: 600px;
             text-align: center;
+            align-items: center;
         }
 
-        & #pets-show {
+        & #missao-show {
             gap: 2rem;
             margin-right: 0;
         }
